--- a/React webapp/src/Navbar/Navbar.module.css
+++ b/React webapp/src/Navbar/Navbar.module.css
@@ -2,6 +2,9 @@
     background-color: rgb(235, 235, 246);
     max-width: 100%;
     text-align: center;
-    display:block;
-    justify-content: space-between;
+    display:flex;
+    justify-content: space-between;  
+    align-items: center;
+    flex-wrap: wrap;
+    
 }
