--- a/React webapp/src/Navbar/Navbar.module.css
+++ b/React webapp/src/Navbar/Navbar.module.css
@@ -12,8 +12,16 @@
 
 .navcard3{
     display:flex;
-    justify-content:end;     
+    justify-content:end;  
 }
+
+.navcard3 button{ 
+    border-radius: 5px;
+    padding: 3px;
+    gap: 5px;
+}
+
+
 
 .navcard1 h2{
     color: whitesmoke;  
